--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
+    "react-icons": "^4.10.1",
     "vite": "^4.4.0"
   }
 }
